Added pharmacophore fetch to web service
